--- a/assets/page/style2.css
+++ b/assets/page/style2.css
@@ -5,14 +5,12 @@ header {
     margin-right: 5rem;
     margin-top: 2rem;
     }
-main {
-display: flex;
-flex-direction: row;
-}
-.section-1 {
-    margin-top: 5rem;
-    align-items: center;
-    margin-left: 6rem;
+.container{
+display: grid;   
+grid-template-columns: repeat(3, 1fr);
+grid-template-rows: repeat(2, 1fr); 
+gap: 20px;
+margin-left: 5rem;
 }
 h1 {
 font-family: Arial, Helvetica, sans-serif;
@@ -20,12 +18,9 @@ font-size: 4rem;
 align-items: center;
 margin-right: 5rem;
 margin-top: 2rem; 
+margin-left: 5rem;
 }
-h2 {
-font-family: Arial, Helvetica, sans-serif;
-align-items: center;
-font-size: 1rem;
-}
+
 footer {
     margin-bottom: 5rem;
     display: flex;
